# EduRmDistill

./: .gitignore  AGENTS.md  LICENSE  README-ZH.md  README.md  main.py  pyproject.toml
mimic/: __init__.py  cli.py  config.py
mimic/generator/: __init__.py  dataloader.py  types.py
mimic/generator/client/: __init__.py  interface.py  openai.py
mimic/templates/: __init__.py  config.yaml.example
mimic/trainer/: __init__.py  swift_trainer.py
scripts/: gpu_test.py  raw_data.py
