[project]
name = "mimic-kit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.0.0",
    "diskcache>=5.6.3",
    "openai>=1.0.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "transformers[torch]>=5.3.0",
]

[project.scripts]
mimic = "mimic.cli:cli"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["mimic*"]
exclude = ["data*", "scripts*"]

[dependency-groups]
dev = [
    "datasets>=4.7.0",
]
