[project]
name = "mimic-kit"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.0.0",
    "deepspeed>=0.18.7",
    "diskcache>=5.6.3",
    "liger-kernel>=0.7.0",
    "mpi4py>=4.1.1",
    "ms-swift>=4.0.1",
    "openai>=1.0.0",
    "peft>=0.6.2",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "torch>=2.10.0",
    "transformers[torch]>=5.2.0",
]

[project.scripts]
mimic = "mimic.cli:cli"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["mimic*"]
exclude = ["data*", "scripts*"]

[dependency-groups]
dev = ["datasets>=3.6.0"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]
